--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -19,8 +19,15 @@
   {% endfor %}
 
   <ul class="pager">
-    <li><a href="#">Previous</a></li>
-    <li><a href="#">Next</a></li>
+    {% if posts.has_previous %}
+        <li><a href="?page={{ posts.previous_page_number }}">Назад</a></li>
+    {% endif %}
+    <span class="current">
+        Страница {{ posts.number }} из {{ posts.paginator.num_pages }}
+    </span>
+    {% if posts.has_next %}
+    <li><a href="?page={{ posts.next_page_number }}">Далее</a></li>
+    {% endif %}
   </ul>
 
 </div><!-- /.blog-main -->
