number of comments

--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -60,7 +60,7 @@
 
     <div class="blog-footer">
       <p>
-        <a href="#">Back to top</a>
+        <a href="#">Наверх</a>
       </p>
     </div>
 
